# CLAUDIO

./: LICENSE  README.md  claudio.py  claudio_lists.py  claudio_mod02_01.py  claudio_mod02_02.py  claudio_mod02_03.py  claudio_mod02_di.py  claudio_xl.py  config.txt  pyproject.toml  python-setup_docker  read_out.py  requirements.txt  setup.py
claudio/: claudio.py  claudio_lists.py  claudio_mod02_struct.py  claudio_ops.py  claudio_structdi.py  claudio_xl.py
claudio/data/: topolink_inputfile.inp
claudio/module01/: README.md
claudio/module02/: README.md  run_module02_intra.py
claudio/module03/: README.md
claudio/module04/: README.md
claudio/utils/: utils.py
config/: config.txt  config_description.txt
data/in/: iiCheck_config.txt  liu18_schweppe17_linked_residues_2616.csv  liu18_schweppe17_linked_residues_intra-homo_2370_nonredundant.csv  liu18_schweppe17_linked_residues_intra-homo_2379_nonredundant.csv  liu18_schweppe17_linked_residues_intra-homo_2672_nonredundant.csv  liu18_schweppe17_unique_linked_protein_770_3d_ppi.csv  sample_data.csv  supp_RA117.000470_133922_0_supp_23973_3zf3c5_table1.csv  topolink_inputfile.inp
module01/: README.md
module01/src/: main.py
module02/: README.md  run_module02_intra.py
module02/src01_uniprot_search/: main.py
module02/src02_structure_search/: main.py
module02/src03_distance_reevaluation/: main.py
module02/src04_read_out/: main.py
module02/src_distance_reevaluation/: main.py
module03/: README.md
module04/: README.md
test/: benchmark_data.csv  sample_data.csv  sample_data_random.csv
utils/: utils.py
(+93 files in other folders)
