[tool.poetry]
name = "claudio"
version = "0.9.0"
description = "Structural analysis, mapping, validation, visualization, and modeling of protein cross-links on protein and protein-protein interaction."
authors = ["Alexander Röhl"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "claudio"}]

[tool.poetry.dependencies]
python = "^3.7"
biopython = "1.79"
click = "*"
matplotlib = "*"
pandas = "*"
requests = "*"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
